[tool.poetry]
name = "rt-docs"
version = "0.1.0"
description = ""
authors = ["skill issue"]
license = "MIT"
readme = "none"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.4"
pygments = "^2.17.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
